--- a/TestExcel/Views/Report/data.cshtml
+++ b/TestExcel/Views/Report/data.cshtml
@@ -150,7 +150,7 @@
             <div class="w3-container">
                 <div class="w3-card-4" style="max-width:400px;height:400px">
                     <header class="w3-container w3-blue">
-                        <h2 class="w3-center">PDF ภาระผู้สอน</h2>
+                        <h2 class="w3-center">PDF ภาระการสอน</h2>
                     </header>
                     @using (Html.BeginForm("PfReport", "Report", FormMethod.Post, new { @class = "form-horizontal" }))
                     {
@@ -198,7 +198,13 @@
                             <div class="w3-container">
                                 <div class="w3-container">
                                     <label class="w3-margin-top">ภาควิชา</label>
-                                    @Html.DropDownList("course_name", (SelectList)ViewBag.ddl_Course, new { @class = "w3-input w3-border w3-margin-bottom", style = "" })
+                                    <select class="w3-select w3-border" id="department" name="department">
+                                        @foreach (var item in Model)
+                                        {
+                                            <option value="@item.DEPARTMENT_ID">@item.DEPARTMENT_NAME</option>
+                                        }
+                                        <option value="0">อื่น ๆ</option>
+                                    </select>
                                     <label>ภาคการศึกษา</label>
                                     <select class="w3-select w3-border w3-margin-bottom" id="semester" name="semester">
                                         <option value="1">1</option>
