--- a/TestExcel/Views/TimeSchedule/PSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/PSchedule.cshtml
@@ -243,7 +243,7 @@
                 <thead>
                     <tr>
                         <td colspan="14" border="0" align="center">
-                            <p id="First_Header">First</p>
+                            <p id="First_Header">ทฤษฎี</p>
                         </td>
                     </tr>
                 </thead>
@@ -320,7 +320,7 @@
                 <thead>
                     <tr>
                         <td colspan="14" border="0" align="center">
-                            <p id="Second_Header">Second</p>
+                            <p id="Second_Header">ปฎิบัติ</p>
                         </td>
                     </tr>
                 </thead>
