--- a/TestExcel/Views/TimeSchedule/DSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/DSchedule.cshtml
@@ -252,7 +252,7 @@
                 <thead>
                     <tr>
                         <td colspan="14" border="0" align="center">
-                            <p id="First_Header">First</p>
+                            <p id="First_Header">ทฤษฎี</p>
                         </td>
                     </tr>
                 </thead>
@@ -329,7 +329,7 @@
                 <thead>
                     <tr>
                         <td colspan="14" border="0" align="center">
-                            <p id="Second_Header">Second</p>
+                            <p id="Second_Header">ปฎิบัติ</p>
                         </td>
                     </tr>
                 </thead>
