--- a/TestExcel/Views/TimeSchedule/PSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/PSchedule.cshtml
@@ -48,7 +48,7 @@
 <div class="w3-row w3-center fontup">
     <a href="~/TimeSchedule/DSchedule" style="color:blue;font-size:20px">สาขาวิชา |</a>
     <a href="~/TimeSchedule/PSchedule" style="color:blue;font-size:20px">ผู้สอน |</a>
-    <a href="~/TimeSchedule/ClSchedule" style="color:blue;font-size:20px">อาคาร/ห้องเรียน |</a>
+    @*<a href="~/TimeSchedule/ClSchedule" style="color:blue;font-size:20px">อาคาร/ห้องเรียน |</a>*@
     <a href="~/TimeSchedule/TeSchedule" style="color:blue;font-size:20px">วิชาเรียน</a>
 </div>
 <h2>@PROFESSOR_NAME</h2>
