--- a/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
@@ -55,7 +55,7 @@
 <div class="w3-row w3-center fontup">
     <a href="~/TimeSchedule/DSchedule" style="color:blue;font-size:20px">สาขาวิชา |</a>
     <a href="~/TimeSchedule/PSchedule" style="color:blue;font-size:20px">ผู้สอน |</a>
-    <a href="~/TimeSchedule/ClSchedule" style="color:blue;font-size:20px">อาคาร/ห้องเรียน |</a>
+    @*<a href="~/TimeSchedule/ClSchedule" style="color:blue;font-size:20px">อาคาร/ห้องเรียน |</a>*@
     <a href="~/TimeSchedule/TeSchedule" style="color:blue;font-size:20px">วิชาเรียน</a>
 </div>
 <div id="Alert" class="alert alert-success collapse">
