--- a/TestExcel/Views/Data/Building.cshtml
+++ b/TestExcel/Views/Data/Building.cshtml
@@ -12,8 +12,8 @@
     <a href="~/Data/Building" style="color:blue;font-size:20px">อาคาร/ห้องเรียน |</a>
     <a href="~/Data/Course" style="color:blue;font-size:20px">หลักสูตร |</a>
     <a href="~/Data/Department" style="color:blue;font-size:20px">ภาควิชา |</a>
-    <a href="~/Data/Professor" style="color:blue;font-size:20px">อาจารย์ </a>
-    @*<a href="~/Data/Member" style="color:blue;font-size:20px">User</a>*@
+    <a href="~/Data/Professor" style="color:blue;font-size:20px">อาจารย์ |</a>
+    <a href="~/Data/Member" style="color:blue;font-size:20px">ผู้ใช้งาน |</a>
 </div>
 <br>
 <div class="container">
