--- a/TestExcel/Views/TimeSchedule/PSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/PSchedule.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<TestExcel.Models.Section_Subject>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "PSchedule";
     int i = 0; var j = 0; int k = 0; int l = 0; int m = 0;
     string color;
     string textcreadit = "";
