--- a/TestExcel/Views/Shared/_Navbar.cshtml
+++ b/TestExcel/Views/Shared/_Navbar.cshtml
@@ -1,7 +1,7 @@
 ﻿<script src="~/Scripts/bootstrap.min.js"></script>
 <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 <link href="~/Content/EditStyle.css" rel="stylesheet" />
-@{ 
+@{
     string SEMESTER = ViewBag.Semester;
     string YEAR = ViewBag.Year;
     string dataID = ViewBag.dataID;
@@ -17,32 +17,32 @@
             @Html.ActionLink("Home", "DSchedule", "TimeSchedule", new { area = "" }, new { @class = "navbar-brand" })
         </div>
         <div class="navbar-collapse collapse">
-            @*@if (Session["Username"] != null)
-                {*@
-            <ul class="nav navbar-nav">
-                <li><a href="@Url.Action("DSchedule","TimeSchedule")">ตารางเรียน</a></li>
-                <li><a href="@Url.Action("data","Report")">Import/Export Pdf/Excel</a></li>
-                <li><a href="@Url.Action("Section","Data")">แก้ไขข้อมูล</a></li>
-                <li><a href="@Url.Action("Download","Report",new { id="คู่มือการใช้งาน" })">คู่มือการใช้งาน</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                    <a class="dropdown-toggle noti" data-toggle="dropdown" href="#">
-                        <span class="fa fa-bell" aria-hidden="true"><span class="" id="count"></span></span>
-                    </a>
-                    <ul class="dropdown-menu" id="notiContent"></ul>
-                </li>
-                @*<li><a href="#" uk-icon="icon: sign-out"><i class="fa fa-user" aria-hidden="true"></i> @Session["Username"].ToString()</a></li>
-                    <li><a href="@Url.Action("Logout","Login")" uk-icon="icon: sign-out"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a></li>*@
-            </ul>
-            @*}
-                else
-                {
+            @if (Session["Username"] != null)
+            {
+                <ul class="nav navbar-nav">
+                    <li><a href="@Url.Action("DSchedule","TimeSchedule")">ตารางเรียน</a></li>
+                    <li><a href="@Url.Action("data","Report")">Import/Export Pdf/Excel</a></li>
+                    <li><a href="@Url.Action("Section","Data")">แก้ไขข้อมูล</a></li>
+                    <li><a href="@Url.Action("Download","Report",new { id="คู่มือการใช้งาน" })">คู่มือการใช้งาน</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a class="dropdown-toggle noti" data-toggle="dropdown" href="#">
+                            <span class="fa fa-bell" aria-hidden="true"><span class="" id="count"></span></span>
+                        </a>
+                        <ul class="dropdown-menu" id="notiContent"></ul>
+                    </li>
+                    <li><a href="#" uk-icon="icon: sign-out"><i class="fa fa-user" aria-hidden="true"></i> @Session["Username"].ToString()</a></li>
+                    <li><a href="@Url.Action("Logout","Login")" uk-icon="icon: sign-out"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a></li>
+                </ul>
+            }
+            else
+            {
 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="@Url.Action("Index","Login")" uk-icon="icon: sign-out"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a></li>
                 </ul>
-                }*@
+            }
 
         </div>
     </div>
@@ -90,7 +90,9 @@
         box-shadow: 0 0 1px #333;
     }
 </style>
-<script>
+@if (Session["Username"] != null)
+{
+    <script>
     $(document).ready(function () {
         $(document).click(function () {
             if ($(".dropdown-menu").show()) {
@@ -215,43 +217,44 @@
             $("#notiContent").toggle();
         });
     });
-</script>
+    </script>
 
-<div class="modal fade" id="SaveConfirmation">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <a href="#" class="close" data-dismiss="modal">&times;</a>
-                <h4>แจ้งเตือน:มีวิชาเรียนชน</h4>
-            </div>
-            <div class="modal-body">
-                <h4>คุณแน่ใจหรือไม่ว่าต้องการ Save ข้อมูล</h4>
-                <div id="ress" name="ress"></div>
-                <div class="modal-footer">
-                    <a href="#" class="btn btn-primary" data-dismiss="modal">Cancle</a>
-                    <input id="ConfirmSave" name="ConfirmSave" type="submit" value="SAVE" href="#" class="btn btn-danger">
+    <div class="modal fade" id="SaveConfirmation">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <a href="#" class="close" data-dismiss="modal">&times;</a>
+                    <h4>แจ้งเตือน:มีวิชาเรียนชน</h4>
                 </div>
+                <div class="modal-body">
+                    <h4>คุณแน่ใจหรือไม่ว่าต้องการ Save ข้อมูล</h4>
+                    <div id="ress" name="ress"></div>
+                    <div class="modal-footer">
+                        <a href="#" class="btn btn-primary" data-dismiss="modal">Cancle</a>
+                        <input id="ConfirmSave" name="ConfirmSave" type="submit" value="SAVE" href="#" class="btn btn-danger">
+                    </div>
 
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="modal fade" id="SaveConfirmationAll">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <a href="#" class="close" data-dismiss="modal">&times;</a>
-                <h4>แจ้งเตือน:มีวิชาเรียนชน</h4>
-            </div>
-            <div class="modal-body">
-                <h4>คุณแน่ใจหรือไม่ว่าต้องการ Save ข้อมูลทั้งหมด</h4>
-                <div id="res" name="res"></div>
-                <div class="modal-footer">
-                    <a href="#" class="btn btn-primary" data-dismiss="modal">Cancle</a>
-                    <input id="ConfirmSaveAll" name="ConfirmSaveAll" type="submit" value="SAVE" href="#" class="btn btn-danger">
+    <div class="modal fade" id="SaveConfirmationAll">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <a href="#" class="close" data-dismiss="modal">&times;</a>
+                    <h4>แจ้งเตือน:มีวิชาเรียนชน</h4>
                 </div>
+                <div class="modal-body">
+                    <h4>คุณแน่ใจหรือไม่ว่าต้องการ Save ข้อมูลทั้งหมด</h4>
+                    <div id="res" name="res"></div>
+                    <div class="modal-footer">
+                        <a href="#" class="btn btn-primary" data-dismiss="modal">Cancle</a>
+                        <input id="ConfirmSaveAll" name="ConfirmSaveAll" type="submit" value="SAVE" href="#" class="btn btn-danger">
+                    </div>
 
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
